fix: adjusted mindscape chips colors for better visibility

--- a/src/components/styles/CharactersTable.pcss
+++ b/src/components/styles/CharactersTable.pcss
@@ -11,16 +11,16 @@
     background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-7));
 }
 .mindscape-chip[data-level="1"] {
-    background-color: #2f4858;
+    background-color: #1f4054;
 }
 .mindscape-chip[data-level="2"] {
-    background-color: #006f84;
+    background-color: #005a6c;
 }
 .mindscape-chip[data-level="3"] {
-    background-color: #009997;
+    background-color: #007b79;
 }
 .mindscape-chip[data-level="4"] {
-    background-color: #00c189;
+    background-color: #00966b;
 }
 .mindscape-chip[data-level="5"] {
     background-color: #64e45f;
